# sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
aigateway/: __init__.py  client.py  webhook.py
tests/: test_client.py  test_webhook.py
